fixed spacing of cocktail-picker-image so it matches cocktail-image-and-recipe's horizontal spacing below 510px viewport width

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -381,6 +381,13 @@ px      68    160    252    */
     padding-top: 50px;
   }
 }
+@media screen and (max-width: 510px) {
+  #cocktail-picker-block .cocktail-picker-image {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  
+}
 
 /* @media screen and (max-width: 991px) {
   .cocktail-image-and-recipe .cocktail-image-col {
